<resources>
    <string name="app_name">Logical Op</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="staff_member">Staff member</string>
    <string name="it_student">It Student</string>
    <string name="IT_Student">IT Student</string>
    <string name="result_will_display_here">Result will display here</string>
    <string name="check_discount_eligibility">Check discount eligibility</string>
    <string name="banned_from_store">Banned from store</string>
    <string name="enter_your_age">Enter your age</string>
</resources>